Add Name and Made with Love content
Signed-off-by: afterallafk <shivamatiet2001@gmail.com>

--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
 
   <!-- Footer Section -->
   <footer class="footer">
-    <p>&copy; 2024 Your Name. All rights reserved.</p>
+	<p>&copy; Made with &#9829 by Aditya</p>
+    <p>&copy; 2024 Tejas Kumar. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
