Add Mobile view and remove the Copy symbol
Signed-off-by: afterallafk <shivamatiet2001@gmail.com>

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
   <!-- Footer Section -->
   <footer class="footer">
-	<p>&copy; Made with &#9829 by Aditya</p>
+	<p>Made with &#9829 by Aditya</p>
     <p>&copy; 2024 Tejas Kumar. All rights reserved.</p>
   </footer>
 
